Responsive design is ready

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<article class="cover-story">
 				<a href="" class="cover-trigger"></a>
 			</article>
-			<article class="cover-story">
+			<article class="cover-story" id="cover-story-2">
 				<a href="" class="cover-trigger"></a>
 			</article>
 			<article class="cover-story">
